--- a/fast-company/package.json
+++ b/fast-company/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.1.0",
         "bootstrap-icons": "^1.9.1",
+        "chroma-js": "^2.4.2",
         "lodash": "^4.17.15",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
