--- a/form_9.2/package.json
+++ b/form_9.2/package.json
@@ -37,8 +37,10 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
+    "postcss-import": "^15.0.0",
     "tailwindcss": "^3.2.1"
   }
 }
