--- a/start-hooks/package.json
+++ b/start-hooks/package.json
@@ -18,8 +18,8 @@
         "web-vitals": "^1.0.1"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+        "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -46,7 +46,6 @@
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-standard": "^16.0.3",
-        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.1.0",
