--- a/Graduation project/my-school/package.json
+++ b/Graduation project/my-school/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
