--- a/Graduation project/my-school/package.json
+++ b/Graduation project/my-school/package.json
@@ -6,8 +6,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.0",
+    "axios": "^1.2.1",
     "casual": "^1.6.2",
+    "eslint-formatter-pretty": "^4.1.0",
     "json-server": "^0.17.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -52,6 +53,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.18",
     "prettier": "2.7.1",
+    "sass": "^1.56.1",
     "tailwindcss": "^3.2.1"
   }
 }
