--- a/fast-company/package.json
+++ b/fast-company/package.json
@@ -12,6 +12,7 @@
         "bootstrap-icons": "^1.5.0",
         "chroma-js": "^2.4.2",
         "eslint-plugin-prettier": "^3.4.1",
+        "history": "^4.9.0",
         "lodash": "^4.17.15",
         "nanoid": "^3.2.0",
         "prettier": "^2.8.1",
@@ -26,7 +27,7 @@
         "web-vitals": "^1.0.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts --openssl-legacy-provider start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
